--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@applitools/eyes-cypress": "^3.52.0",
     "cypress": "^13.16.1",
     "cypress-xpath": "^2.0.1",
     "mochawesome": "^7.1.3",
